# CSU-PC-tool

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.cd397ad  deploy.txt
src/: App.qml  CMakeLists.txt  fluentUiPcTool_en_US.qm  fluentUiPcTool_en_US.ts  fluentUiPcTool_zh_CN.qm  fluentUiPcTool_zh_CN.ts  main.cpp  main.qml  qml.qrc
src/User/backend/include/: Iprotocol.h  ProtocolManager.h  SerialController.h  SerialWorker.h  Singleton.h  SlipProtocol.h  utilsCrc16.h
src/User/backend/include/Log/: alarmLogModel.h  logManager.h
src/User/backend/include/dbTab/: dbTabQuerry.h  dbTable.h  dbTableMang.h
src/User/backend/include/dbTab/querry/: testpage1.h
src/User/backend/include/page/: IpageController.h  PageFieldTable.h  PageInfoAcInfo.h  mainPage.h  page1.h  pageBase.h  pageConfigAlarmPara.h  pageConfigBattPara.h  pageConfigSys.h  pageInfo10kvIsolator.h  pageInfoAlarmLog.h  pageInfoDcInfo.h  pageInfoMainInfo.h  pageMang.h  settingPage.h
src/User/backend/include/page/parsers/: IDataParser.h  basicDataParser.h  customDataParser.h
src/User/backend/include/serial/: Iprotocol.h  ProtocolManager.h  SerialController.h  SerialWorker.h  SlipProtocol.h
src/User/backend/include/utils/: utilsType.h
src/User/backend/source/: ProtocolManager.cpp  SerialController.cpp  SerialWorker.cpp  SlipProtocol.cpp  utilsCrc16.cpp  utilsType.cpp
src/User/backend/source/Log/: alarmLogModel.cpp  logManager.cpp
src/User/backend/source/dbTab/: dbTabQuerry.cpp  dbTable.cpp  dbTableMang.cpp
src/User/backend/source/dbTab/querry/: testpage1.cpp
src/User/backend/source/page/: PageFieldTable.cpp  PageInfoAcInfo.cpp  mainPage.cpp  pageBase.cpp  pageConfigAlarmPara.cpp  pageConfigBattPara.cpp  pageConfigSys.cpp  pageInfo10kvIsolator.cpp  pageInfoAlarmLog.cpp  pageInfoDcInfo.cpp  pageInfoMainInfo.cpp  pageMang.cpp  settingPage.cpp
src/User/backend/source/page/parsers/: basicDataParser.cpp  customDataParser.cpp  dataParserFactory.cpp
src/User/backend/source/serial/: ProtocolManager.cpp  SerialController.cpp  SerialWorker.cpp  SlipProtocol.cpp
src/User/ui/: CofnigCommWindows.qml
src/User/ui/global/: CustCalendarPicker.qml  CustTimePicker.qml  GlobalModel.qml  ItemsSide.qml  ItemsSideFooter.qml  qmldir
src/User/ui/page/: P_Config_AlarmPara.qml  P_Config_BattPara.qml  P_Config_SystemPara.qml  P_Info_10KvIsolator.qml  P_Info_ACInfo.qml  P_Info_AlarmLog.qml  P_Info_DcInfo.qml  P_Info_mainInfo.qml  P_info_AlarmLog.qml  P_main.qml  P_setting.qml
src/User/ui/page/pageComBoxOption/: Option_BattPara.qml  Option_SystemPara.qml
